atualização do .env para informações para o login com o google ffuncionar corretamente

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,10 @@ PORT=3000
 DATABASE_URL="postgresql://root:123456@localhost:5432/backend_db"
 # chave de segurança dp JWT
 JWT_SECRET="minha_chave_secreta_super_segura"
+
+# configuraçoes do google para utilizar o login pelo google
+# valores adiquiridos configurando um auth2 do google no google clound console
+GOOGLE_CLIENT_ID=example
+GOOGLE_CLIENT_SECRET=example
+# rota CALLBACK quando o login for efetuado
+GOOGLE_CALLBACK_URL=http://localhost:3333/api/auth/google/callback
