feat: - Atualização do modelo Prisma - Criação da tabela PasswordResetToken para armazenar tokens de recuperação de senha - Implementação de transporte SMTP para envio de e-mail de recuperação de senha - Adição de verificação de nome da empresa no registro - Implementação do fluxo de recuperação de senha - Impedindo a recuperação de senha para usuários que logaram com o Google

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,9 @@ GOOGLE_CLIENT_ID=example
 GOOGLE_CLIENT_SECRET=example
 # rota CALLBACK quando o login for efetuado
 GOOGLE_CALLBACK_URL=http://localhost:3333/api/auth/google/callback
+
+# credenciais de servidor smtp para recuperaçao de senha. Esta configurado para GMAIL
+# seria o email de suporte
+SMTP_USER=seuemail@gmail.com 
+# voce pode conseguir atraves do senha de aplicativo nas configuraçoes de segurança da sua conta
+SMTP_PASS=sua_senha_ou_app_password
