--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "db:reset": "prisma migrate reset --force --skip-seed", 
+    "db:seed": "ts-node src/seed.ts"
   },
   "keywords": [],
   "author": "alysson rafael",
